Add project documentation and configuration files
- Add SereneAI memory files for code conventions, project overview, structure, and task checklist
- Implement new task startup procedure in .clinerules
- Update .gitignore to exclude .env and track CI artifacts
- Add TypeScript symbol cache and project configuration
- Update package dependencies and lockfile
- Initialize test directory and project documentation

--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
   "main": "index.js",
   "scripts": {
     "test": "playwright test",
-    "test:ui": "playwright test --ui",
-    "test:debug": "playwright test --debug",
     "prepare": "husky",
     "lint": "eslint .",
     "format": "prettier --write \"**/*.{ts,js,json}\"",
@@ -28,6 +26,7 @@
     "@types/node": "^24.0.3",
     "@typescript-eslint/eslint-plugin": "^8.34.1",
     "@typescript-eslint/parser": "^8.34.1",
+    "dotenv": "^16.5.0",
     "eslint": "^9.29.0",
     "eslint-config-prettier": "^10.1.5",
     "husky": "^9.1.7",
