feat(monitoring): Add authenticated dashboard health check
This commit introduces a new Playwright test to monitor a dashboard application (Grafana) that requires authentication.

To handle credentials securely, the test suite now integrates with 1Password to fetch a username, password, and TOTP code.

Key changes include:
- A new test file `tests/dashboard_app.spec.ts` for the dashboard health check.
- Integration of the 1Password secrets action into the Gitea workflow to provide credentials to the test runner.
- A new `setup-env.sh` script to facilitate running tests locally by loading credentials from the 1Password CLI.
- Enhanced CI failure notifications to specify which application's health check failed.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,13 @@
-INDEXER_APP_URL=https://example.indexer-app.local:9696
+INDEXER_APP_URL=http://example.indexer-app.local
 INDEXER_APP_NAME=ExampleIndexerApp
 INDEXER_NAME=ExampleIndexer
-PUSHOVER_TOKEN=your_pushover_app_token
-PUSHOVER_USER=your_pushover_user_key
+
+# Dashboard app settings
+DASHBOARD_APP_URL=http://example.dashboard-app.local
+DASHBOARD_APP_NAME=ExampleDashboardApp
+DASHBOARD_URL_WILDCARD=**/example.dashboard-app.local/**
+AUTH_URL_WILDCARD=**/example.auth.local/**
+
+# Auth settings for 1Password
+SERVICE_ACCOUNT_VAULT=your-1password-vault
+SERVICE_ACCOUNT_ITEM=your-1password-item-name
