ci: Update dotenv action to v2.3.0
Update the `xom9ikk/dotenv-action` to its newer version, `xom9ikk/dotenv@v2.3.0`, to align with the latest release.

This change also updates the configuration parameter from `mode: 'expand'` to `load-mode: strict`. Using `strict` mode makes the workflow more robust by ensuring it fails if the `.env` file is not found.

--- a/.gitea/workflows/run-tests.yml
+++ b/.gitea/workflows/run-tests.yml
@@ -41,9 +41,9 @@ jobs:
           service-account-token: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }}
 
       - name: Load .env file
-        uses: xom9ikk/dotenv-action@v2
+        uses: xom9ikk/dotenv@v2.3.0
         with:
-          mode: 'expand'
+          load-mode: strict
 
       - name: Load secrets
         uses: 1password/load-secrets-action@v2
