ci: Parse Playwright JSON report for easier processing
Switch the Playwright test reporter to generate a JSON report. The JSON format is more structured and easier to parse programmatically within the CI pipeline.

The `run-tests` workflow is updated to process this new `test-results.json` file using `jq`. This replaces the previous, more brittle method of grepping an XML report, making the failure detection for application health checks more robust.

The uploaded artifact name and path are also updated to `test-results` for consistency.

--- a/.gitea/workflows/run-tests.yml
+++ b/.gitea/workflows/run-tests.yml
@@ -59,20 +59,21 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v3
         with:
-          name: playwright-report
-          path: playwright-report/
+          name: test-results
+          path: test-results/
           retention-days: 7
 
       - name: Parse test results
         id: test-results
         if: steps.playwright-test.outcome == 'failure'
         run: |
-          FAILED_TESTS=$(grep -o "Dashboard application health check.*failed" playwright-report/report.xml || echo "")
+          cat test-results/test-results.json | jq '.suites[].specs[] | .title + ":" + .tests[].results[].status' > test-results/results.txt
+          FAILED_TESTS=$(grep -o "Dashboard application health check.*failed" test-results/results.txt || echo "")
           if [[ ! -z "$FAILED_TESTS" ]]; then
             echo "::set-output name=app_failure::dashboard"
           fi
 
-          FAILED_TESTS=$(grep -o "Indexer application health check.*failed" playwright-report/report.xml || echo "")
+          FAILED_TESTS=$(grep -o "Indexer application health check.*failed" test-results/results.txt || echo "")
           if [[ ! -z "$FAILED_TESTS" ]]; then
             echo "::set-output name=app_failure::indexer"
           fi
