ci: Install jq in run-tests workflow
Add a step to the Gitea workflow to install the `jq` utility.

The subsequent "Parse test results" step, which runs on test failure, requires `jq` to process JSON-formatted test output.

This change dynamically fetches the latest version of `jq` and detects the runner's architecture (amd64/arm64) to download the appropriate binary. This makes the workflow more robust and avoids hardcoding a specific version.

--- a/.gitea/workflows/run-tests.yml
+++ b/.gitea/workflows/run-tests.yml
@@ -63,6 +63,21 @@ jobs:
           path: test-results/
           retention-days: 7
 
+      - name: Install jq
+        run: |
+          LATEST_JQ_VERSION=$(curl -s https://api.github.com/repos/jqlang/jq/releases/latest | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/')
+          ARCH=$(uname -m)
+          if [ "$ARCH" = "x86_64" ]; then
+            JQ_ARCH="amd64"
+          elif [ "$ARCH" = "aarch64" ]; then
+            JQ_ARCH="arm64"
+          else
+            echo "Unsupported architecture: $ARCH"
+            exit 1
+          fi
+          sudo curl -L "https://github.com/jqlang/jq/releases/download/${LATEST_JQ_VERSION}/jq-linux-${JQ_ARCH}" -o /usr/local/bin/jq
+          sudo chmod +x /usr/local/bin/jq
+
       - name: Parse test results
         id: test-results
         if: steps.playwright-test.outcome == 'failure'
