ci: Make Pushover failure notification more dynamic
Update the Pushover notification for failed monitoring tests to be more specific and concise.

The notification title is now dynamically generated using the failing application's name (e.g., "dashboard monitoring") instead of the static "Homelab Monitoring".

The message body has also been simplified by removing parenthetical tool names for privacy.

--- a/.gitea/workflows/run-tests.yml
+++ b/.gitea/workflows/run-tests.yml
@@ -101,8 +101,8 @@ jobs:
           PUSHOVER_USER: ${{ secrets.PUSHOVER_USER }}
         with:
           status: 'failed'
-          title: 'Homelab Monitoring'
-          message: '${{ steps.test-results.outputs.app_failure == "dashboard" && "Dashboard (Grafana)" || "Indexer (Prowlarr)" }} application monitoring failed'
+          title: '${{ steps.test-results.outputs.app_failure }} monitoring'
+          message: '${{ steps.test-results.outputs.app_failure == "dashboard" && "Dashboard" || "Indexer" }} application monitoring failed'
 
       - name: Send workflow failure notification
         uses: umahmood/pushover-actions@main
