feat(ci): Add linting for Gitea workflows
This commit introduces `actionlint` to validate Gitea workflow files, ensuring syntax errors are caught before they are committed.

- A new `lint:workflows` npm script is added, which runs `actionlint` via Docker.
- The script is integrated into the `.husky/pre-commit` hook to automate validation.
- The `run-tests.yml` workflow is updated to use `christopherhx/gitea-upload-artifact`, a Gitea-compatible version of the artifact upload action, as the official action fails in a non-GitHub environment.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "test": "playwright test",
     "prepare": "husky",
     "lint": "eslint .",
+    "lint:workflows": "bash ./scripts/lint-workflows.sh",
     "format": "prettier --write \"**/*.{ts,js,json}\"",
     "lint-staged": "lint-staged"
   },
