--- a/.gitea/workflows/run-tests.yml
+++ b/.gitea/workflows/run-tests.yml
@@ -57,7 +57,8 @@ jobs:
 
       - name: Upload test results
         if: always()
-        uses: actions/upload-artifact@v3
+        # Patched to use Gitea upload artifact action, GH action hard-codes a GHES check that breaks on Gitea
+        uses: christopherhx/gitea-upload-artifact@v4
         with:
           name: test-results
           path: test-results/
