feat: Add workflow application monitor
Adds a new Playwright test to monitor the health of a workflow automation application.

The test verifies application availability by:
- Navigating to the application URL
- Authenticating using credentials from 1Password
- Confirming that the main "Overview" page loads successfully

This commit also introduces the necessary configuration variables in `.env` and `.env.example`, updates the `setup-env.sh` script, and adds documentation for the new monitor.

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,12 @@ AUTH_URL_WILDCARD=**/example.auth.local/**
 # Auth settings for 1Password
 SERVICE_ACCOUNT_VAULT=your-1password-vault
 SERVICE_ACCOUNT_ITEM=your-1password-item-name
+
+# Workflow app settings
+WORKFLOW_APP_URL=http://example.workflow-app.local
+WORKFLOW_APP_NAME=ExampleWorkflowApp
+WORKFLOW_URL_WILDCARD=**/example.workflow-app.local/**
+
+# Workflow Auth settings for 1Password
+WORKFLOW_SERVICE_ACCOUNT_VAULT=your-1password-vault
+WORKFLOW_SERVICE_ACCOUNT_ITEM=your-1password-item-name
