Configure workflow authentication credentials from 1Password
Add `WORKFLOW_AUTH_USERNAME` and `WORKFLOW_AUTH_PASSWORD` environment variables to the `run-tests.yml` workflow. These credentials are fetched from 1Password to provide dedicated authentication for workflow-specific operations.

--- a/.gitea/workflows/run-tests.yml
+++ b/.gitea/workflows/run-tests.yml
@@ -47,6 +47,8 @@ jobs:
           AUTH_USERNAME: op://${{ env.SERVICE_ACCOUNT_VAULT }}/${{ env.SERVICE_ACCOUNT_ITEM }}/username
           AUTH_PASSWORD: op://${{ env.SERVICE_ACCOUNT_VAULT }}/${{ env.SERVICE_ACCOUNT_ITEM }}/password
           AUTH_TOTP: op://${{ env.SERVICE_ACCOUNT_VAULT }}/${{ env.SERVICE_ACCOUNT_ITEM }}/one-time password?attribute=otp
+          WORKFLOW_AUTH_USERNAME: op://${{ env.WORKFLOW_SERVICE_ACCOUNT_VAULT }}/${{ env.WORKFLOW_SERVICE_ACCOUNT_ITEM }}/username
+          WORKFLOW_AUTH_PASSWORD: op://${{ env.WORKFLOW_SERVICE_ACCOUNT_VAULT }}/${{ env.WORKFLOW_SERVICE_ACCOUNT_ITEM }}/password
         with:
           export-env: true
 
