--- a/.gitea/workflows/run-tests.yml
+++ b/.gitea/workflows/run-tests.yml
@@ -128,6 +128,28 @@ jobs:
           title: 'Homelab Monitoring'
           message: 'Workflow failed - ${{ github.actor }}'
 
+      # If this is a successful run, check if previous run was a failure
+      - name: Check previous run status
+        id: check-previous-run
+        if: success() && steps.playwright-test.outcome != 'failure'
+        run: |
+          LAST_RUN_ID=$((${{ github.run_id }} - 1))
+          LAST_RUN_STATUS=$(curl -s -H "Authorization: token ${{ secrets.GITEA_TOKEN }}" "${{ env.GITEA_HOST }}/api/v1/repos/${{ github.repository }}/actions/runs" | jq -r '.workflow_runs[] | select(.id == '"$LAST_RUN_ID"') | .conclusion')
+          if [[ "$LAST_RUN_STATUS" == "failure" ]]; then
+            echo "recovered=true" >> "$GITHUB_OUTPUT"
+          fi
+
+      - name: Send recovery notification
+        uses: umahmood/pushover-actions@main
+        if: success() && steps.check-previous-run.outputs.recovered == 'true'
+        env:
+          PUSHOVER_TOKEN: ${{ secrets.PUSHOVER_TOKEN }}
+          PUSHOVER_USER: ${{ secrets.PUSHOVER_USER }}
+        with:
+          status: 'recovered'
+          title: 'Homelab Monitoring'
+          message: 'Monitoring recovered after a failure'
+
       - name: Final status check
         if: steps.playwright-test.outcome == 'failure'
         run: exit 1
