feat: Update Gitea host configuration and fix API token reference in workflow

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,5 @@ WORKFLOW_URL_WILDCARD=**/example.workflow-app.local/**
 # Workflow Auth settings for 1Password
 WORKFLOW_SERVICE_ACCOUNT_VAULT=your-1password-vault
 WORKFLOW_SERVICE_ACCOUNT_ITEM=your-1password-item-name
+
+GITEA_HOST=http://example.gitea.local
